<resources>
    <string name="app_name">StoryApp</string>
    <string name="input_password">Input Password</string>
    <string name="input_username">Input Username</string>
    <string name="add_new_story">Add New Story</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="setting">Setting</string>
    <string name="icon_theme">icon theme</string>
    <string name="Success">Login Success</string>
    <string name="SuccessRegister">Register Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="SuccessMsg">Welcome to StoryApp!</string>
    <string name="FailedMsg">Failed Register: %1$s</string>
    <string name="RegisMsg">Welcome to StoryApp!\nLogin to your Account Now</string>
    <string name="login_image">Login Image</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_image">Register Image</string>
    <string name="story_image">Story Image</string>
    <string name="this_is_the_picture_you_will_post">This is the picture you will post</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="post_story">Post Story</string>
    <string name="icon_translate">icon translate</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="change">choose</string>
    <string name="time">Time</string>
    <string name="eName">Input Name!</string>
    <string name="eEmail">Input Email!</string>
    <string name="ePass">Input Password!</string>
    <string name="invalidEmail">Invalid Email Address</string>
    <string name="invalidPass">Input minimum 8 character</string>
    <string name="inputEmail">Email</string>
    <string name="inputName">Name</string>
    <string name="inputPass">Password</string>
    <string name="welcome_to_storyapp_nshare_your_story_here">Welcome to StoryApp\nShare your story here!</string>
    <string name="dateFormat">Uploaded on %1$s</string>
    <string name="hello">Hello!</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account?</string>
    <string name="story">Story</string>
    <string name="appwidget_text" translatable="false">STORY APP</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="empty_text" translatable="false">NO DATA</string>
    <string name="detail">Detail Story</string>
    <string name="login_msg" translatable="false">Welcome to StoryApp\\nLet\'s Write Your Story!</string>
    <string name="insertPhotoWarning">Insert photo!</string>
    <string name="empty_story">Empty Story</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="location" translatable="false">Location : %1$s, %2$s</string>
    <string name="use_my_location">Post with My Location</string>
    <string name="your_location">Your Location</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="next_activity">Oke</string>
    <string name="maps">Maps</string>
    <string name="refresh">Refresh</string>
    <string name="timeout" translatable="false">Timeout</string>
    <string name="failed_map_style" translatable="false">Style parsing failed</string>
</resources>